title, form placeholder, btn text changed

--- a/cocktail.html
+++ b/cocktail.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <script defer src="cocktail.js"></script>
-    <title>Cocktail</title>
+    <title>LUX // Your Personal Bar</title>
   </head>
   <body>
     <div class="header">
@@ -22,16 +22,16 @@
       </div>
       <div class="nav">
         <form class="search">
-          <input type="text" placeholder="Search for any drinks" />
+          <input type="text" placeholder="Search for any drink here..." />
           <button class="search-btn">search</button>
         </form>
-        <button class="btn-cocktail">Random Cocktail</button>
-        <button class="btn-non-alcoholic">Random Non-alcoholic</button>
-        <button class="nav-item">Bookmark</button>
+        <button class="btn-cocktail">Random Alcoholic Cocktail</button>
+        <button class="btn-non-alcoholic">Random Non-alcoholic Cocktail</button>
+        <button class="bookmark">Bookmarked</button>
         <!-- <div class="nav-item">Add Drink</div> -->
       </div>
     </div>
-    <div class="search_list">
+    <div class="search_list custom-scroll">
       <!--the search result will appear here-->
     </div>
 
