change placeholder text at input field

--- a/cocktail.html
+++ b/cocktail.html
@@ -22,13 +22,12 @@
       </div>
       <div class="nav">
         <form class="search">
-          <input type="text" placeholder="Search for any drink here..." />
-          <button class="search-btn">search</button>
+          <input type="text" placeholder="Search here" />
+          <button class="search-btn">Search</button>
         </form>
         <button class="btn-cocktail">Random Alcoholic Cocktail</button>
         <button class="btn-non-alcoholic">Random Non-alcoholic Cocktail</button>
         <button class="bookmark">Bookmarked</button>
-        <!-- <div class="nav-item">Add Drink</div> -->
       </div>
     </div>
     <div class="search_list custom-scroll">
