add btn to clear bookmarks saved

--- a/cocktail.html
+++ b/cocktail.html
@@ -32,6 +32,7 @@
         <button class="btn-cocktail">Random Alcoholic Cocktail</button>
         <button class="btn-non-alcoholic">Random Non-alcoholic Cocktail</button>
         <button class="bookmarked">Bookmarked</button>
+        <button class="clear">Clear</button>
       </div>
     </div>
     <div class="search_result_container custom-scroll">
