--- a/cocktail.html
+++ b/cocktail.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
+    <link rel="stylesheet" href="list.css" />
     <script defer src="cocktail.js"></script>
     <title>LUX // Your Personal Bar</title>
   </head>
@@ -32,7 +33,7 @@
         <button class="btn-cocktail">Random Alcoholic Cocktail</button>
         <button class="btn-non-alcoholic">Random Non-alcoholic Cocktail</button>
         <button class="bookmarked">Bookmarked</button>
-        <button class="clear">Clear</button>
+        <!-- <button class="clear">Clear</button> -->
       </div>
     </div>
     <div class="search_result_container custom-scroll">
@@ -49,6 +50,21 @@
       </ul>
     </div>
     <div class="container">
+      <div class="bookmarked_content_inactive">
+        <!-- <div class="title_text">Non-alcoholic Drink</div> -->
+        <ul class="non_alcoholic">
+          <li class="bookmark_item"><a href="#">Smoothie</a>(non_alcoholic)</li>
+          <li class="bookmark_item"><a href="#">Coffee</a>(non_alcoholic)</li>
+          <li class="bookmark_item"><a href="#">Juice</a>(non_alcoholic)</li>
+        </ul>
+
+        <!-- <div class="title_text">Alcoholic Drink</div> -->
+        <ul class="alcoholic">
+          <li class="bookmark_item"><a href="#">Vodka</a>(alcoholic)</li>
+          <li class="bookmark_item"><a href="#">Gin</a>(alcoholic)</li>
+          <li class="bookmark_item"><a href="#">Martini</a>(alcoholic)</li>
+        </ul>
+      </div>
       <div class="cocktails">
         <!-- Cocktail info will appear here-->
       </div>
