uncomment clearBtn, delete list title

--- a/cocktail.html
+++ b/cocktail.html
@@ -33,7 +33,7 @@
         <button class="btn-cocktail">Random Alcoholic Cocktail</button>
         <button class="btn-non-alcoholic">Random Non-alcoholic Cocktail</button>
         <button class="bookmarked">Bookmarked</button>
-        <!-- <button class="clear">Clear</button> -->
+        <button class="clear">Clear</button>
       </div>
     </div>
     <div class="search_result_container custom-scroll">
@@ -50,21 +50,20 @@
       </ul>
     </div>
     <div class="container">
-      <div class="bookmarked_content_inactive">
-        <!-- <div class="title_text">Non-alcoholic Drink</div> -->
+      <!-- <div class="bookmarked_content_inactive">
         <ul class="non_alcoholic">
           <li class="bookmark_item"><a href="#">Smoothie</a>(non_alcoholic)</li>
           <li class="bookmark_item"><a href="#">Coffee</a>(non_alcoholic)</li>
           <li class="bookmark_item"><a href="#">Juice</a>(non_alcoholic)</li>
         </ul>
 
-        <!-- <div class="title_text">Alcoholic Drink</div> -->
+        
         <ul class="alcoholic">
           <li class="bookmark_item"><a href="#">Vodka</a>(alcoholic)</li>
           <li class="bookmark_item"><a href="#">Gin</a>(alcoholic)</li>
           <li class="bookmark_item"><a href="#">Martini</a>(alcoholic)</li>
         </ul>
-      </div>
+      </div> -->
       <div class="cocktails">
         <!-- Cocktail info will appear here-->
       </div>
