clean up filler code in bookmark list

--- a/cocktail.html
+++ b/cocktail.html
@@ -50,20 +50,14 @@
       </ul>
     </div>
     <div class="container">
-      <!-- <div class="bookmarked_content_inactive">
-        <ul class="non_alcoholic">
-          <li class="bookmark_item"><a href="#">Smoothie</a>(non_alcoholic)</li>
-          <li class="bookmark_item"><a href="#">Coffee</a>(non_alcoholic)</li>
-          <li class="bookmark_item"><a href="#">Juice</a>(non_alcoholic)</li>
+      <div class="close-btn close-btn_inactive" onclick="closeBookmarkList()">X</div>
+      <div
+        class="bookmarked_content_container bookmarked_content_container_inactive"
+      >
+        <ul class="bookmark_list">
+          <!-- the bookmarked drinks will appear here -->
         </ul>
-
-        
-        <ul class="alcoholic">
-          <li class="bookmark_item"><a href="#">Vodka</a>(alcoholic)</li>
-          <li class="bookmark_item"><a href="#">Gin</a>(alcoholic)</li>
-          <li class="bookmark_item"><a href="#">Martini</a>(alcoholic)</li>
-        </ul>
-      </div> -->
+      </div>
       <div class="cocktails">
         <!-- Cocktail info will appear here-->
       </div>
