comment out clearBtn

--- a/cocktail.html
+++ b/cocktail.html
@@ -33,7 +33,7 @@
         <button class="btn-cocktail">Random Alcoholic Cocktail</button>
         <button class="btn-non-alcoholic">Random Non-alcoholic Cocktail</button>
         <button class="bookmarked">Bookmarked</button>
-        <button class="clear">Clear</button>
+        <!-- <button class="clear">Clear</button> -->
       </div>
     </div>
     <div class="search_result_container custom-scroll">
@@ -50,7 +50,7 @@
       </ul>
     </div>
     <div class="container">
-      <div class="close-btn close-btn_inactive" onclick="closeBookmarkList()">X</div>
+      <div class="close-btn close-btn_inactive">X</div>
       <div
         class="bookmarked_content_container bookmarked_content_container_inactive"
       >
