--- a/cocktail.html
+++ b/cocktail.html
@@ -26,9 +26,14 @@
         <h2 class="neon-text">We Open All Day</h2>
       </div>
       <div class="nav">
-        <form class="search">
-          <input type="text" placeholder="Search here" />
-          <button class="search-btn">Search</button>
+        <form class="search" id="cocktail_search_form">
+          <input
+            type="text"
+            name="cocktail"
+            id="cocktail"
+            placeholder="Search here"
+          />
+          <button class="search-btn" type="submit">Search</button>
         </form>
         <button class="btn-cocktail">Random Alcoholic Cocktail</button>
         <button class="btn-non-alcoholic">Random Non-alcoholic Cocktail</button>
@@ -37,16 +42,17 @@
       </div>
     </div>
     <div class="search_result_container custom-scroll">
-      <!--the search result will appear here-->
       <ul class="search_list">
-        <li>Result 1</li>
-        <li>Result 2</li>
-        <li>Result 3</li>
-        <li>Result 4</li>
-        <li>Result 5</li>
-        <li>Result 6</li>
-        <li>Result 7</li>
-        <li>Result 8</li>
+        <!--the search result will appear here-->
+        <!-- <li class="list_item">
+          <div class="link" data-id="">
+            <img
+              class="list_item_img"
+              src="https://www.thecocktaildb.com/images/media/drink/xwxyux1441254243.jpg"
+            />
+            Vodka (Alcoholic)
+          </div>
+        </li> -->
       </ul>
     </div>
     <div class="container">
