unifying all btns naming

--- a/cocktail.html
+++ b/cocktail.html
@@ -33,10 +33,10 @@
             id="cocktail"
             placeholder="Search here"
           />
-          <button class="search-btn" type="submit">Search</button>
+          <button class="search_btn" type="submit">Search</button>
         </form>
-        <button class="btn-cocktail">Random Alcoholic Cocktail</button>
-        <button class="btn-non-alcoholic">Random Non-alcoholic Cocktail</button>
+        <button class="btn_cocktail">Random Alcoholic Cocktail</button>
+        <button class="btn_non_alcoholic">Random Non-alcoholic Cocktail</button>
         <button class="bookmarked">Bookmarked</button>
         <!-- <button class="clear">Clear</button> -->
       </div>
@@ -44,19 +44,10 @@
     <div class="search_result_container custom-scroll">
       <ul class="search_list">
         <!--the search result will appear here-->
-        <!-- <li class="list_item">
-          <div class="link" data-id="">
-            <img
-              class="list_item_img"
-              src="https://www.thecocktaildb.com/images/media/drink/xwxyux1441254243.jpg"
-            />
-            Vodka (Alcoholic)
-          </div>
-        </li> -->
       </ul>
     </div>
     <div class="container">
-      <div class="close-btn close-btn_inactive">X</div>
+      <div class="close_btn close_btn_inactive">X</div>
       <div
         class="bookmarked_content_container bookmarked_content_container_inactive"
       >
