--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <script defer type="module" src="js/script.js"></script>
+    <script defer src="js/script.js"></script>
     <title>LUX // Your Personal Bar</title>
   </head>
   <body>
