change title and website tab icon

--- a/index.html
+++ b/index.html
@@ -17,7 +17,26 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <script defer src="js/script.js"></script>
-    <title>LUX // Your Personal Bar</title>
+    <title>LUX - Your Personal Bar</title>
+    <!--change the icon on the website tab-->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/favicon_io/site.webmanifest" />
   </head>
   <body>
     <div class="header">
@@ -47,6 +66,10 @@
       </ul>
     </div>
     <div class="container">
+      <div class="greeting_text">
+        Search for any cocktail using the search bar or the random buttons above
+        😎
+      </div>
       <div class="close_btn close_btn_inactive">X</div>
       <div
         class="bookmarked_content_container bookmarked_content_container_inactive"
