--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
       sizes="16x16"
       href="/favicon_io/favicon-16x16.png"
     />
-    <link rel="manifest" href="/favicon_io/site.webmanifest" />
   </head>
   <body>
     <div class="header">
@@ -55,7 +54,7 @@
           <button class="search_btn" type="submit">Search</button>
         </form>
         <button class="btn_cocktail">Random Alcoholic Cocktail</button>
-        <button class="btn_non_alcoholic">Random Non-alcoholic Cocktail</button>
+        <button class="btn_non_alcoholic">Random Nonalcoholic Cocktail</button>
         <button class="bookmarked">Bookmarked</button>
         <!-- <button class="clear">Clear</button> -->
       </div>
