change nav text

--- a/index.html
+++ b/index.html
@@ -51,12 +51,18 @@
             id="cocktail"
             placeholder="Search here"
           />
-          <button class="search_btn" type="submit">Search</button>
+          <!-- <button class="search_btn" type="submit">Search</button> -->
+          <button class="search_btn" type="submit">🔍</button>
         </form>
-        <button class="btn_cocktail">Random Alcoholic Cocktail</button>
+        <!-- <button class="btn_cocktail">Random Alcoholic Cocktail</button>
         <button class="btn_non_alcoholic">Random Nonalcoholic Cocktail</button>
-        <button class="bookmarked">Bookmarked</button>
+        <button class="bookmarked">Bookmarked</button> -->
         <!-- <button class="clear">Clear</button> -->
+        <button class="btn_cocktail">Random 🍹</button>
+        <button class="btn_non_alcoholic">Random non🍹</button>
+        <button class="bookmarked">
+          <span class="material-symbols-outlined bookmarked-icon-nav"> bookmark_added </span>
+        </button>
       </div>
     </div>
     <div class="search_result_container custom-scroll">
